[tool.poetry]
name = "ghpypi"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "Package index for CIP."
authors = ["Center for an Informed Public <ciptools@uw.edu>"]
packages = [{include = "ghpypi", from = "src"}]

[tool.poetry.scripts]
ghpypi = "ghpypi:main"

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^1.55"
distlib = "^0.3.6"
Jinja2 = "^3.1.2"
packaging = "^21.3"
atomicwrites = "^1.4.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-flake8 = "^1.1.1"
flake8-builtins = "^1.5.3"
flake8-bugbear = "^22.8.23"
flake8-comprehensions = "^3.10.0"
flake8-isort = "^4.2.0"
pep8-naming = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--flake8 -p no:warnings --log-level=ERROR"
