[tool.poetry]
name = "ghpypi"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "Package index for CIP."
authors = ["Center for an Informed Public <ciptools@uw.edu>"]
packages = [{include = "ghpypi", from = "src"}]

[tool.poetry.scripts]
ghpypi = "ghpypi:main"

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^1.57"
distlib = "^0.3.6"
Jinja2 = "^3.1.2"
packaging = "^21.3"
atomicwrites = "^1.4.1"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-isort = "^3.0.0"
pytest-flakes = "^4.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--isort --flakes -p no:warnings --log-level=ERROR"
